# ninjatimes

./: .gitignore  IMPLEMENTATION_PLAN.md  PROBLEM_STATEMENT.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: diag.yml  refresh.yml
config/: athletes.json  backfill.json  settings.json  skips.json
scraper/: parse.py  scrape.py
scraper/tests/: test_parse.py
site/: app.js  index.html  styles.css
site/data/: .gitkeep
