[project]
name = "ninjatimes"
version = "0.1.0"
description = "Scrapes World Ninja League Championship run orders into a mobile-friendly, athlete-centric table."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["scraper/tests"]
